--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,48 +1,60 @@
-name: Build Kivy APK
+name: Build APK
 
 on:
   push:
-    branches: ["main"]
-  workflow_dispatch:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      ANDROIDSDK: /home/runner/android-sdk
+      ANDROIDNDK: /home/runner/android-ndk
+      ANDROIDAPI: 33
+      ANDROIDMINAPI: 24
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Install Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install system dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y \
-          build-essential git zip unzip \
-          openjdk-17-jdk \
-          python3-pip python3-setuptools python3-wheel \
-          libffi-dev libssl-dev liblzma-dev zlib1g-dev
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install buildozer cython==0.29.36 kivy==2.3.0 requests opencv-python
 
-    - name: Install Buildozer
-      run: |
-        pip install --upgrade pip Cython buildozer
+      - name: Cache Buildozer
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.buildozer
+            ~/.pypoetry
+            ~/.cache/pip
+          key: buildozer-cache-${{ github.sha }}
 
-    - name: Install Android SDK/NDK + tools
-      run: |
-        sudo apt install -y android-sdk android-sdk-platform-tools
-        yes | sdkmanager --licenses || true
-        sdkmanager "platforms;android-31" "build-tools;31.0.0" "platform-tools" "tools"
+      - name: Install Android SDK/NDK
+        run: |
+          mkdir -p $ANDROIDSDK/cmdline-tools
+          cd $ANDROIDSDK/cmdline-tools
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+          unzip cmdline-tools.zip
+          mv cmdline-tools latest
+          yes | $ANDROIDSDK/cmdline-tools/latest/bin/sdkmanager --licenses
+          $ANDROIDSDK/cmdline-tools/latest/bin/sdkmanager "platforms;android-33" "build-tools;34.0.0" "platform-tools"
 
-    - name: Build APK
-      run: |
-        buildozer android debug
+      - name: Build APK
+        run: |
+          buildozer android debug
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
-      with:
-        name: myapp-apk
-        path: bin/*.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: myapp-apk
+          path: bin/*.apk
