--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,65 +1,54 @@
-name: Build Android APK
+name: Build Kivy APK
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     env:
-      ANDROIDSDK: ${{ github.workspace }}/android/android-sdk
-      ANDROIDNDK: ${{ github.workspace }}/android/android-ndk
+      ANDROIDSDK: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
+      ANDROIDNDK: ${{ github.workspace }}/.buildozer/android/platform/android-ndk-r25b
+      ANDROIDANT: ${{ github.workspace }}/.buildozer/android/platform/apache-ant-1.9.4
       ANDROIDAPI: 33
       ANDROIDMINAPI: 24
-      PATH: ${{ github.workspace }}/.venv/bin:${{ github.workspace }}/android/android-sdk/cmdline-tools/latest/bin:$PATH
+      P4A_BRANCH: master
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.10
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          python -m venv .venv
-          source .venv/bin/activate
-          pip install --upgrade pip
-          pip install cython==0.29.36 buildozer==1.5.3 kivy==2.3.0
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python3-pip python3-dev build-essential \
+          git wget curl unzip zip openjdk-17-jdk tar
 
-      - name: Download Android SDK Command-line Tools
-        run: |
-          mkdir -p android/android-sdk/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip -d android/android-sdk/cmdline-tools
-          mv android/android-sdk/cmdline-tools/cmdline-tools android/android-sdk/cmdline-tools/latest
-          yes | android/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-          android/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-33" "build-tools;34.0.0" "platform-tools"
+    - name: Upgrade pip
+      run: python -m pip install --upgrade pip
 
-      - name: Download Android NDK
-        run: |
-          wget https://dl.google.com/android/repository/android-ndk-r25b-linux.zip
-          unzip android-ndk-r25b-linux.zip -d android/
-          mv android/android-ndk-r25b android/android-ndk
+    - name: Install Buildozer and dependencies
+      run: |
+        pip install --upgrade buildozer Cython==0.29.36
 
-      - name: Download Apache Ant
-        run: |
-          wget https://archive.apache.org/dist/ant/binaries/apache-ant-1.10.12-bin.zip
-          unzip apache-ant-1.10.12-bin.zip -d android/
-          mv android/apache-ant-1.10.12 android/apache-ant
+    - name: Cache Buildozer builds
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.buildozer
+        key: ${{ runner.os }}-buildozer-${{ hashFiles('**/buildozer.spec') }}
 
-      - name: Build APK
-        run: |
-          source .venv/bin/activate
-          buildozer android debug
-          
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: maintenanceapp-apk
-          path: bin/*.apk
+    - name: Build APK
+      run: |
+        buildozer android debug deploy run
