--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,9 +38,22 @@ jobs:
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
 
-    - name: Install Buildozer and dependencies
+    - name: Install Buildozer and Cython
       run: |
         pip install --upgrade buildozer Cython==0.29.36
+
+    - name: Install Android SDK Build Tools & Platform Tools
+      run: |
+        mkdir -p $ANDROIDSDK/cmdline-tools
+        cd $ANDROIDSDK/cmdline-tools
+        # Download latest command line tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip
+        mv cmdline-tools latest
+        yes | $ANDROIDSDK/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROIDSDK --licenses
+        # Install required build tools
+        $ANDROIDSDK/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROIDSDK \
+          "platform-tools" "platforms;android-33" "build-tools;33.0.2"
 
     - name: Cache Buildozer builds
       uses: actions/cache@v3
