--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,66 +2,84 @@ name: Build Kivy APK
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
 
     env:
-      ANDROIDSDK: ${{ github.workspace }}/.buildozer/android/platform/android-sdk
-      ANDROIDNDK: ${{ github.workspace }}/.buildozer/android/platform/android-ndk-r25b
-      ANDROIDANT: ${{ github.workspace }}/.buildozer/android/platform/apache-ant-1.9.4
-      ANDROIDAPI: 33
-      ANDROIDMINAPI: 24
-      P4A_BRANCH: master
+      ANDROIDSDK: ${{ github.workspace }}/android-sdk
+      ANDROIDNDK: ${{ github.workspace }}/android-ndk-r25b
+      ANT_HOME: ${{ github.workspace }}/apache-ant-1.9.4
+      PATH: ${{ github.workspace }}/.buildozer/venv/bin:${{ github.workspace }}/android-sdk/cmdline-tools/latest/bin:$PATH
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: Install system dependencies
+    - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y python3-pip python3-dev build-essential \
-          git wget curl unzip zip openjdk-17-jdk tar
+        python -m pip install --upgrade pip
+        pip install --upgrade buildozer cython
 
-    - name: Upgrade pip
-      run: python -m pip install --upgrade pip
-
-    - name: Install Buildozer and Cython
-      run: |
-        pip install --upgrade buildozer Cython==0.29.36
-
-    - name: Install Android SDK Build Tools & Platform Tools
-      run: |
-        mkdir -p $ANDROIDSDK/cmdline-tools
-        cd $ANDROIDSDK/cmdline-tools
-        # Download latest command line tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip
-        mv cmdline-tools latest
-        yes | $ANDROIDSDK/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROIDSDK --licenses
-        # Install required build tools
-        $ANDROIDSDK/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROIDSDK \
-          "platform-tools" "platforms;android-33" "build-tools;33.0.2"
-
-    - name: Cache Buildozer builds
+    - name: Cache Buildozer, SDK, NDK
       uses: actions/cache@v3
       with:
         path: |
           ~/.buildozer
+          android-sdk
+          android-ndk-r25b
         key: ${{ runner.os }}-buildozer-${{ hashFiles('**/buildozer.spec') }}
+        restore-keys: |
+          ${{ runner.os }}-buildozer-
+
+    - name: Install Android SDK & Build-tools
+      run: |
+        mkdir -p $ANDROIDSDK/cmdline-tools
+        cd $ANDROIDSDK/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip
+        mv cmdline-tools latest
+
+        # Accept licenses
+        yes | $ANDROIDSDK/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROIDSDK --licenses
+
+        # Install platform-tools, platforms, and build-tools
+        $ANDROIDSDK/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROIDSDK \
+          "platform-tools" \
+          "platforms;android-33" \
+          "build-tools;33.0.2"
+
+        # Verify aidl exists
+        if [ ! -f "$ANDROIDSDK/build-tools/33.0.2/aidl" ]; then
+          echo "Aidl not found, exiting..."
+          exit 1
+        fi
+
+    - name: Install Apache Ant
+      run: |
+        mkdir -p $ANT_HOME
+        cd $ANT_HOME
+        wget https://downloads.apache.org/ant/binaries/apache-ant-1.9.4-bin.zip
+        unzip apache-ant-1.9.4-bin.zip
+        mv apache-ant-1.9.4/* .
+        rm -rf apache-ant-1.9.4 apache-ant-1.9.4-bin.zip
 
     - name: Build APK
       run: |
-        buildozer android debug deploy run
+        buildozer android debug
+        ls -lh bin/
+    
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: maintenanceapp-apk
+        path: bin/*.apk
