--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,11 +9,6 @@ on:
 jobs:
   build-android:
     runs-on: ubuntu-latest
-    env:
-      ANDROID_HOME: ${{ github.workspace }}/android-sdk
-      ANDROIDSDK: ${{ github.workspace }}/android-sdk
-      ANDROIDNDK: ${{ github.workspace }}/android-ndk-r25b
-      PATH: ${{ github.workspace }}/android-sdk/cmdline-tools/latest/bin:${{ github.workspace }}/android-sdk/platform-tools:${{ github.workspace }}/android-ndk-r25b:$PATH
 
     steps:
     - name: Checkout code
@@ -22,40 +17,26 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: "3.10"
 
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y python3-dev python3-pip git unzip zip openjdk-17-jdk tar wget curl build-essential
+        sudo apt-get install -y \
+          git zip unzip openjdk-17-jdk \
+          python3-pip python3-setuptools python3-wheel \
+          libffi-dev libssl-dev build-essential ccache
 
-    - name: Install Buildozer & dependencies
+    - name: Install Buildozer
       run: |
-        python -m pip install --upgrade pip setuptools wheel
-        pip install cython==0.29.36
-        pip install buildozer==1.0.3
+        pip install --upgrade pip
+        pip install buildozer cython
 
-    - name: Cache Buildozer & Python packages
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.buildozer
-          ~/.cache/pip
-        key: ${{ runner.os }}-buildozer-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-buildozer-
-
-    - name: Install Android SDK Command-line Tools
+    - name: Initialize buildozer (if needed)
       run: |
-        mkdir -p $ANDROID_HOME/cmdline-tools
-        cd $ANDROID_HOME/cmdline-tools
-        if [ ! -d latest ]; then
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip
-          mv cmdline-tools latest
+        if [ ! -f buildozer.spec ]; then
+          buildozer init
         fi
-        yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME --licenses
-        $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2" "ndk;25.2.9519653"
 
     - name: Build APK
       run: |
@@ -64,5 +45,5 @@ jobs:
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: maintenanceapp-debug.apk
+        name: kivy-apk
         path: bin/*.apk
