--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-
 name: Build Kivy Android App
 
 on:
@@ -32,6 +31,12 @@ jobs:
       run: |
         pip install --upgrade pip
         pip install buildozer cython
+
+    - name: Cache Buildozer downloads
+      uses: actions/cache@v3
+      with:
+        path: ~/.buildozer
+        key: ${{ runner.os }}-buildozer
 
     - name: Initialize buildozer (if needed)
       run: |
