--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,9 @@ jobs:
         path: ~/.buildozer
         key: ${{ runner.os }}-buildozer
 
+    - name: Clean SDK cache (force fresh install)
+      run: rm -rf ~/.buildozer/android/platform/android-sdk
+
     - name: Initialize buildozer (if needed)
       run: |
         if [ ! -f buildozer.spec ]; then
@@ -45,8 +48,7 @@ jobs:
         fi
 
     - name: Build APK
-      run: |
-        buildozer android debug
+      run: buildozer android debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
