--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,16 +32,20 @@ jobs:
         pip install --upgrade pip
         pip install buildozer cython
 
-    - name: Install Android build-tools
-      run: |
-        yes | sdkmanager --licenses
-        sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
-
     - name: Cache Buildozer downloads
       uses: actions/cache@v3
       with:
         path: ~/.buildozer
         key: ${{ runner.os }}-buildozer
+
+    - name: Clean SDK cache (force fresh install)
+      run: rm -rf ~/.buildozer/android/platform/android-sdk
+
+    - name: Initialize buildozer (if needed)
+      run: |
+        if [ ! -f buildozer.spec ]; then
+          buildozer init
+        fi
 
     - name: Build APK
       run: buildozer android debug
