--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,8 +38,8 @@ jobs:
         path: ~/.buildozer
         key: ${{ runner.os }}-buildozer
 
-    - name: Clean SDK cache (force fresh install)
-      run: rm -rf ~/.buildozer/android/platform/android-sdk
+    - name: Clean Buildozer SDK cache
+      run: rm -rf ~/.buildozer/android/platform/android-sdk ~/.buildozer/android/platform/android-ndk*
 
     - name: Initialize buildozer (if needed)
       run: |
