--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         path: ~/.buildozer
         key: ${{ runner.os }}-buildozer
 
-    - name: Clean Buildozer SDK cache
+    - name: Clean Buildozer SDK/NDK cache
       run: rm -rf ~/.buildozer/android/platform/android-sdk ~/.buildozer/android/platform/android-ndk*
 
     - name: Initialize buildozer (if needed)
@@ -47,8 +47,10 @@ jobs:
           buildozer init
         fi
 
-    - name: Build APK
-      run: buildozer android debug
+    - name: Clean and Build APK
+      run: |
+        buildozer android clean
+        buildozer android debug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
