--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,15 +32,8 @@ jobs:
         pip install --upgrade pip
         pip install buildozer==1.5.0 python-for-android==2024.1.21 cython
 
-    - name: Clear runner Android env
-      run: |
-        unset ANDROID_HOME
-        unset ANDROID_SDK_ROOT
-        unset ANDROID_NDK_HOME
-        unset ANDROID_NDK
-
-    - name: Clean Buildozer toolchain
-      run: rm -rf ~/.buildozer/android/platform ~/.buildozer/android/packages ~/.buildozer/android/build
+    - name: Clean Buildozer SDK/NDK
+      run: rm -rf ~/.buildozer/android/platform/android-sdk ~/.buildozer/android/platform/android-ndk*
 
     - name: Build APK
       run: |
