--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout code (no submodules)
       uses: actions/checkout@v4
+      with:
+        submodules: false
+        fetch-depth: 0
+
+    - name: Ensure .buildozer is ignored and no stray .gitmodules
+      run: |
+        echo ".buildozer/" >> .gitignore
+        if [ -f .gitmodules ]; then
+          echo "Found .gitmodules, showing content:"
+          cat .gitmodules || true
+        fi
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -32,11 +43,16 @@ jobs:
         pip install --upgrade pip
         pip install buildozer==1.5.0 python-for-android==2024.1.21 cython
 
-    - name: Clean Buildozer SDK/NDK
-      run: rm -rf ~/.buildozer/android/platform/android-sdk ~/.buildozer/android/platform/android-ndk*
+    - name: Clean Buildozer toolchain (SDK/NDK/builds)
+      run: rm -rf ~/.buildozer/android/platform ~/.buildozer/android/packages ~/.buildozer/android/build
 
-    - name: Build APK
+    - name: Build with verbose logs
+      env:
+        P4A_log_level: 2
       run: |
+        # Optional: ensure your buildozer.spec is present in the repo
+        test -f buildozer.spec || buildozer init
+        # Clean then build
         buildozer android clean
         buildozer android debug
 
@@ -45,3 +61,21 @@ jobs:
       with:
         name: kivy-apk
         path: bin/*.apk
+
+    - name: Upload Buildozer logs for diagnosis
+      if: always()
+      run: |
+        LOG_DIR="$HOME/.buildozer/android/platform"
+        mkdir -p logs
+        # Common buildozer/p4a logs
+        cp -v "$LOG_DIR"/build.log logs/ 2>/dev/null || true
+        cp -v "$LOG_DIR"/debug.log logs/ 2>/dev/null || true
+        # Fallback: grab any logs under .buildozer
+        tar -czf logs/buildozer-logs.tgz -C "$HOME/.buildozer" . || true
+      shell: bash
+    - name: Upload logs artifact
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: buildozer-logs
+        path: logs/*
