--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout code (with submodules)
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -25,7 +28,7 @@ jobs:
           sudo apt-get install -y \
             git zip unzip openjdk-17-jdk \
             libffi-dev libssl-dev build-essential ccache \
-            libncurses6 libtinfo6
+            libncurses6 libtinfo6 gcc-multilib g++-multilib zlib1g:i386 libc6:i386 libstdc++6:i386
 
           # Compatibility symlinks for Ubuntu 24.04
           sudo ln -sf /usr/lib/x86_64-linux-gnu/libncurses.so.6 /usr/lib/x86_64-linux-gnu/libncurses.so.5
@@ -35,6 +38,9 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install buildozer python-for-android cython
+
+      - name: Clean Buildozer toolchain
+        run: rm -rf ~/.buildozer/android/platform ~/.buildozer/android/packages ~/.buildozer/android/build
 
       - name: Ensure buildozer.spec exists
         run: |
@@ -48,7 +54,6 @@ jobs:
         run: |
           buildozer android debug --verbose
 
-      # --- New step: Print last lines of Buildozer logs for debugging ---
       - name: Show Buildozer logs
         if: always()
         run: |
